src/templates/NavBar.module.css
/*
This value needs to be updated manually when the menu grows or shrinks.
While this value could be computed on page load, it would cause a layout shift
to fold the menu if it overflows. Let's go with a static value for now.
*/
@value breakpoint: 700px;

.nav {
  position: sticky;
  inset-block-start: 0;
  z-index: 1;
  padding: 0.5rem;
  container-type: inline-size;
  color: var(--jahia-color);
  background-color: color-mix(in srgb, var(--jahia-container-background) 75%, transparent);
  backdrop-filter: blur(0.5rem);
  transition: background var(--jahia-timing);

  &[data-open="true"] {
    background-color: var(--jahia-container-background);
  }
}

:where(.nav) ul {
  padding: 0;
  list-style: none;
}

.barLink {
  @apply _pack-2;

  padding: 0.5rem;
  color: inherit;
  text-decoration: inherit;
  background: none;
  border: none;
}

.desktopMenu a,
.mobileMenu a {
  display: block;
  width: 100%;
  padding: 0.5rem;
  color: inherit;
  text-decoration: inherit;
  border-radius: 0.125rem;

  &[aria-current] {
    font-weight: bold;
  }
}

/* Mobile menu */

.menuButton {
  display: inline-flex;
  align-items: center;
  padding: calc(0.75rem - 1px);
  color: var(--jahia-blue);
  background: transparent;
  border: 1px solid var(--jahia-border);
  border-radius: 0.25rem;

  @container (width >= breakpoint) {
    display: none;
  }
}

.mobileMenu {
  position: fixed;
  inset-inline: 0;

  /* Leave a small gap below, that, when clicked, closes the menu */
  max-height: 80vh;
  padding: 0.5rem;
  overflow: scroll;
  overscroll-behavior: contain;

  /* Fading the color to avoid the compression effect of scaleY(0) */
  color: transparent;

  /* Copy properties of the nav to make the transition smoother */
  background-color: color-mix(in srgb, var(--jahia-container-background) 75%, transparent);
  backdrop-filter: blur(0.5rem);
  transform: translateY(0.5rem) /* The menu needs to be placed outside the padding of the nav */
    scaleY(0);
  transform-origin: top;
  transition:
    transform var(--jahia-motion-timing),
    color var(--jahia-timing),
    background-color var(--jahia-timing);

  [data-open="true"] & {
    color: inherit;
    background: var(--jahia-container-background);
    box-shadow: 0 0 2rem #0008; /* Transparent black so the shadow is visible on navy blue */
    transform: translateY(0.5rem) scaleY(1);
  }

  a:hover,
  a:focus-visible {
    background: var(--jahia-neutral-600);
  }

  @container (width >= breakpoint) {
    display: none;
  }
}

.mobileMenu .columns {
  display: grid;
  grid-template-columns: auto;
  gap: 0 1rem;
  padding: 0;

  > * {
    min-width: 12rem;
  }

  @container (width >= 400px) {
    grid-template-columns: 1fr 1fr;
  }
}

.submenu {
  > ul {
    height: 0;
    padding-inline: 1rem;
    contain: paint;
    opacity: 0;
    transform: translateY(-1rem);
    transition:
      transform var(--jahia-motion-timing),
      opacity var(--jahia-timing);
  }

  &[data-open="true"] > ul {
    height: auto;
    opacity: 1;
    transform: translateY(0);
  }
}

.submenuLabel {
  @apply _pack-0;

  width: 100%;
  padding: 0;
  line-height: 1.5;
  color: inherit;
  text-align: start;
  background: transparent;
  border: transparent;
  border-radius: 0.125rem;

  > :first-child {
    flex: 1;
    padding: 0.5rem;
    border-inline-end: 1px solid var(--jahia-border);
  }

  > :last-child {
    margin: 0.5rem;
    margin-inline-start: 0.75rem;
  }

  &:hover,
  &:focus-visible {
    background: var(--jahia-neutral-600);

    > :first-child {
      border-inline-end: 1px solid var(--jahia-container-background);
    }
  }
}

/* Desktop menu */

.desktopMenu {
  display: none;
  min-width: 12rem;

  @container (width >= breakpoint) {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    color: var(--jahia-neutral-700);
    background: var(--jahia-neutral-50);
    border-radius: 0.25rem;
    box-shadow: 0 0.25rem 1rem color-mix(in srgb, var(--jahia-neutral-700) 25%, transparent);
    opacity: 0;
    transition: opacity var(--jahia-timing);

    [data-open="true"] & {
      opacity: 1;
    }
  }

  a:hover,
  a:focus-visible {
    background: var(--jahia-neutral-100);
  }
}

.desktopMenu .singleColumn {
  padding: 1rem;
}

.desktopMenu .columns {
  display: flex;
  padding: 0;

  > * {
    min-width: 12rem;
    padding: 1rem;
  }

  > * + * {
    border-inline-start: 1px solid var(--jahia-inner-border);
  }
}

/* Shared */

.menuColumn {
  display: flex;
  flex-direction: column;

  small {
    padding: 0.5rem;
    font-weight: 500;
    color: var(--jahia-blue);
    text-transform: uppercase;
  }
}

.desktopBar {
  display: none;
}

@container (width >= breakpoint) {
  /* Unocss does not support nested @apply, so we need to repeat .desktopBar */
  .desktopBar {
    @apply _pack-4;
  }
}

